cmake_minimum_required(VERSION 3.23)
project(Snake)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc")
set(SFML_STATIC_LIBRARIES TRUE)

add_executable(Snake main.cpp menu.h gameOver.h)


set(SFML_DIR "SFML-2.5.1\\lib\\cmake\\SFML")

target_link_libraries(Snake sfml-graphics sfml-audio)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
find_package(SFML 2.5 REQUIRED graphics network audio window system)